==> paparazzi/paparazzi/sw/airborne/arch/stm32/mcu_periph/spi_arch.c <==
#include <libopencm3/cm3/nvic.h>
#include <libopencm3/stm32/gpio.h>
#include <libopencm3/stm32/rcc.h>
#include <libopencm3/stm32/exti.h>
#include <libopencm3/stm32/spi.h>
#include <libopencm3/stm32/dma.h>
#include "mcu_periph/spi.h"
#include "mcu_periph/gpio.h"
#include BOARD_CONFIG
#define NVIC_SPI_IRQ_PRIO 0

bool_t spi_submit(struct spi_periph *p, struct spi_transaction *t)
{
  uint8_t idx;
  idx = p->trans_insert_idx + 1;
  if (idx >= SPI_TRANSACTION_QUEUE_LEN) { idx = 0; }
  if ((idx == p->trans_extract_idx) || ((t->input_length == 0) && (t->output_length == 0))) {
    t->status = SPITransFailed;
    return FALSE; /* queue full or input_length and output_length both 0 */
    // TODO can't tell why it failed here if it does
  }

  t->status = SPITransPending;

  //Disable interrupts to avoid race conflict with end of DMA transfer interrupt
  //FIXME
  spi_arch_int_disable(p);

  // GT: no copy?  There's a queue implying a copy here...
  p->trans[p->trans_insert_idx] = t;
  p->trans_insert_idx = idx;

  /* if peripheral is idle, start the transaction */
  if (p->status == SPIIdle && !p->suspend) {
    spi_start_dma_transaction(p, p->trans[p->trans_extract_idx]);
  }
  //FIXME
  spi_arch_int_enable(p);
  return TRUE;
}

void spi1_arch_init(void)
{

  // set dma options
  spi1_dma.spidr = (uint32_t)&SPI1_DR;
#ifdef STM32F1
  spi1_dma.dma = DMA1;
  spi1_dma.rcc_dma = RCC_DMA1;
  spi1_dma.rx_chan = DMA_CHANNEL2;
  spi1_dma.tx_chan = DMA_CHANNEL3;
  spi1_dma.rx_nvic_irq = NVIC_DMA1_CHANNEL2_IRQ;
  spi1_dma.tx_nvic_irq = NVIC_DMA1_CHANNEL3_IRQ;
#elif defined STM32F4
  spi1_dma.dma = DMA2;
  spi1_dma.rcc_dma = RCC_DMA2;
  // TODO make a macro to configure this from board/airframe file ?
  spi1_dma.rx_chan = DMA_STREAM0;
  spi1_dma.tx_chan = DMA_STREAM5;
  spi1_dma.rx_chan_sel = DMA_SxCR_CHSEL_3;
  spi1_dma.tx_chan_sel = DMA_SxCR_CHSEL_3;
  spi1_dma.rx_nvic_irq = NVIC_DMA2_STREAM0_IRQ;
  spi1_dma.tx_nvic_irq = NVIC_DMA2_STREAM5_IRQ;
#endif
  spi1_dma.tx_dummy_buf = 0;
  spi1_dma.tx_extra_dummy_dma = FALSE;
  spi1_dma.rx_dummy_buf = 0;
  spi1_dma.rx_extra_dummy_dma = FALSE;

  // set the default configuration
  set_default_comm_config(&spi1_dma.comm);
  spi1_dma.comm_sig = get_comm_signature(&spi1_dma.comm);

  // set init struct, indices and status
  spi1.reg_addr = (void *)SPI1;
  spi1.init_struct = &spi1_dma;
  spi1.trans_insert_idx = 0;
  spi1.trans_extract_idx = 0;
  spi1.status = SPIIdle;


  // Enable SPI1 Periph and gpio clocks
  rcc_periph_clock_enable(RCC_SPI1);

  // Configure GPIOs: SCK, MISO and MOSI
#ifdef STM32F1
  gpio_setup_pin_af(GPIO_BANK_SPI1_MISO, GPIO_SPI1_MISO, 0, FALSE);
  gpio_setup_pin_af(GPIO_BANK_SPI1_MOSI, GPIO_SPI1_MOSI, 0, TRUE);
  gpio_setup_pin_af(GPIO_BANK_SPI1_SCK, GPIO_SPI1_SCK, 0, TRUE);
#elif defined STM32F4
  gpio_setup_pin_af(SPI1_GPIO_PORT_MISO, SPI1_GPIO_MISO, SPI1_GPIO_AF, FALSE);
  gpio_setup_pin_af(SPI1_GPIO_PORT_MOSI, SPI1_GPIO_MOSI, SPI1_GPIO_AF, TRUE);
  gpio_setup_pin_af(SPI1_GPIO_PORT_SCK, SPI1_GPIO_SCK, SPI1_GPIO_AF, TRUE);

  gpio_set_output_options(SPI1_GPIO_PORT_MOSI, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SPI1_GPIO_MOSI);
  gpio_set_output_options(SPI1_GPIO_PORT_SCK, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SPI1_GPIO_SCK);
#endif

  // reset SPI
  spi_reset(SPI1);

  // Disable SPI peripheral
  spi_disable(SPI1);

  // Force SPI mode over I2S.
  SPI1_I2SCFGR = 0;

  // configure master SPI.
  spi_init_master(SPI1, spi1_dma.comm.br, spi1_dma.comm.cpol, spi1_dma.comm.cpha,
                  spi1_dma.comm.dff, spi1_dma.comm.lsbfirst);
  /*
   * Set NSS management to software.
   *
   * Note:
   * Setting nss high is very important, even if we are controlling the GPIO
   * ourselves this bit needs to be at least set to 1, otherwise the spi
   * peripheral will not send any data out.
   */
  spi_enable_software_slave_management(SPI1);
  spi_set_nss_high(SPI1);

  // Enable SPI_1 DMA clock
  rcc_periph_clock_enable(spi1_dma.rcc_dma);

  // Enable SPI1 periph.
  spi_enable(SPI1);

  spi_arch_int_enable(&spi1);
}

void spi2_arch_init(void)
{

  // set dma options
  spi2_dma.spidr = (uint32_t)&SPI2_DR;
  spi2_dma.dma = DMA1;
  spi2_dma.rcc_dma = RCC_DMA1;
#ifdef STM32F1
  spi2_dma.rx_chan = DMA_CHANNEL4;
  spi2_dma.tx_chan = DMA_CHANNEL5;
  spi2_dma.rx_nvic_irq = NVIC_DMA1_CHANNEL4_IRQ;
  spi2_dma.tx_nvic_irq = NVIC_DMA1_CHANNEL5_IRQ;
#elif defined STM32F4
  spi2_dma.rx_chan = DMA_STREAM3;
  spi2_dma.tx_chan = DMA_STREAM4;
  spi2_dma.rx_chan_sel = DMA_SxCR_CHSEL_0;
  spi2_dma.tx_chan_sel = DMA_SxCR_CHSEL_0;
  spi2_dma.rx_nvic_irq = NVIC_DMA1_STREAM3_IRQ;
  spi2_dma.tx_nvic_irq = NVIC_DMA1_STREAM4_IRQ;
#endif
  spi2_dma.tx_dummy_buf = 0;
  spi2_dma.tx_extra_dummy_dma = FALSE;
  spi2_dma.rx_dummy_buf = 0;
  spi2_dma.rx_extra_dummy_dma = FALSE;

  // set the default configuration
  set_default_comm_config(&spi2_dma.comm);
  spi2_dma.comm_sig = get_comm_signature(&spi2_dma.comm);

  // set init struct, indices and status
  spi2.reg_addr = (void *)SPI2;
  spi2.init_struct = &spi2_dma;
  spi2.trans_insert_idx = 0;
  spi2.trans_extract_idx = 0;
  spi2.status = SPIIdle;


  // Enable SPI2 Periph and gpio clocks
  rcc_periph_clock_enable(RCC_SPI2);

  // Configure GPIOs: SCK, MISO and MOSI
#ifdef STM32F1
  gpio_setup_pin_af(GPIO_BANK_SPI2_MISO, GPIO_SPI2_MISO, 0, FALSE);
  gpio_setup_pin_af(GPIO_BANK_SPI2_MOSI, GPIO_SPI2_MOSI, 0, TRUE);
  gpio_setup_pin_af(GPIO_BANK_SPI2_SCK, GPIO_SPI2_SCK, 0, TRUE);
#elif defined STM32F4
  gpio_setup_pin_af(SPI2_GPIO_PORT_MISO, SPI2_GPIO_MISO, SPI2_GPIO_AF, FALSE);
  gpio_setup_pin_af(SPI2_GPIO_PORT_MOSI, SPI2_GPIO_MOSI, SPI2_GPIO_AF, TRUE);
  gpio_setup_pin_af(SPI2_GPIO_PORT_SCK, SPI2_GPIO_SCK, SPI2_GPIO_AF, TRUE);

  gpio_set_output_options(SPI2_GPIO_PORT_MOSI, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SPI2_GPIO_MOSI);
  gpio_set_output_options(SPI2_GPIO_PORT_SCK, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SPI2_GPIO_SCK);
#endif

  // reset SPI
  spi_reset(SPI2);

  // Disable SPI peripheral
  spi_disable(SPI2);

  // Force SPI mode over I2S.
  SPI2_I2SCFGR = 0;

  // configure master SPI.
  spi_init_master(SPI2, spi2_dma.comm.br, spi2_dma.comm.cpol, spi2_dma.comm.cpha,
                  spi2_dma.comm.dff, spi2_dma.comm.lsbfirst);

  /*
   * Set NSS management to software.
   * Setting nss high is very important, even if we are controlling the GPIO
   * ourselves this bit needs to be at least set to 1, otherwise the spi
   * peripheral will not send any data out.
   */
  spi_enable_software_slave_management(SPI2);
  spi_set_nss_high(SPI2);

  // Enable SPI_2 DMA clock
  rcc_periph_clock_enable(spi2_dma.rcc_dma);

  // Enable SPI2 periph.
  spi_enable(SPI2);

  spi_arch_int_enable(&spi2);
}

void spi3_arch_init(void)
{

  // set the default configuration
  spi3_dma.spidr = (uint32_t)&SPI3_DR;
#ifdef STM32F1
  spi3_dma.dma = DMA2;
  spi3_dma.rcc_dma = RCC_DMA2;
  spi3_dma.rx_chan = DMA_CHANNEL1;
  spi3_dma.tx_chan = DMA_CHANNEL2;
  spi3_dma.rx_nvic_irq = NVIC_DMA2_CHANNEL1_IRQ;
  spi3_dma.tx_nvic_irq = NVIC_DMA2_CHANNEL2_IRQ;
#elif defined STM32F4
  spi3_dma.dma = DMA1;
  spi3_dma.rcc_dma = RCC_DMA1;
  spi3_dma.rx_chan = DMA_STREAM0;
  spi3_dma.tx_chan = DMA_STREAM5;
  spi3_dma.rx_chan_sel = DMA_SxCR_CHSEL_0;
  spi3_dma.tx_chan_sel = DMA_SxCR_CHSEL_0;
  spi3_dma.rx_nvic_irq = NVIC_DMA1_STREAM0_IRQ;
  spi3_dma.tx_nvic_irq = NVIC_DMA1_STREAM5_IRQ;
#endif
  spi3_dma.tx_dummy_buf = 0;
  spi3_dma.tx_extra_dummy_dma = FALSE;
  spi3_dma.rx_dummy_buf = 0;
  spi3_dma.rx_extra_dummy_dma = FALSE;

  // set the default configuration
  set_default_comm_config(&spi3_dma.comm);
  spi3_dma.comm_sig = get_comm_signature(&spi3_dma.comm);

  // set init struct, indices and status
  spi3.reg_addr = (void *)SPI3;
  spi3.init_struct = &spi3_dma;
  spi3.trans_insert_idx = 0;
  spi3.trans_extract_idx = 0;
  spi3.status = SPIIdle;


  // Enable SPI3 Periph and gpio clocks
  rcc_periph_clock_enable(RCC_SPI3);

  // Configure GPIOs: SCK, MISO and MOSI
#ifdef STM32F1
  gpio_setup_pin_af(GPIO_BANK_SPI3_MISO, GPIO_SPI3_MISO, 0, FALSE);
  gpio_setup_pin_af(GPIO_BANK_SPI3_MOSI, GPIO_SPI3_MOSI, 0, TRUE);
  gpio_setup_pin_af(GPIO_BANK_SPI3_SCK, GPIO_SPI3_SCK, 0, TRUE);
#elif defined STM32F4
  gpio_setup_pin_af(SPI3_GPIO_PORT_MISO, SPI3_GPIO_MISO, SPI3_GPIO_AF, FALSE);
  gpio_setup_pin_af(SPI3_GPIO_PORT_MOSI, SPI3_GPIO_MOSI, SPI3_GPIO_AF, TRUE);
  gpio_setup_pin_af(SPI3_GPIO_PORT_SCK, SPI3_GPIO_SCK, SPI3_GPIO_AF, TRUE);

  gpio_set_output_options(SPI3_GPIO_PORT_MOSI, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SPI3_GPIO_MOSI);
  gpio_set_output_options(SPI3_GPIO_PORT_SCK, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SPI3_GPIO_SCK);
#endif

  /// @todo disable JTAG so the pins can be used?

  // reset SPI
  spi_reset(SPI3);

  // Disable SPI peripheral
  spi_disable(SPI3);

  // Force SPI mode over I2S.
  SPI3_I2SCFGR = 0;

  // configure master SPI.
  spi_init_master(SPI3, spi3_dma.comm.br, spi3_dma.comm.cpol, spi3_dma.comm.cpha,
                  spi3_dma.comm.dff, spi3_dma.comm.lsbfirst);

  /*
   * Set NSS management to software.
   * Setting nss high is very important, even if we are controlling the GPIO
   * ourselves this bit needs to be at least set to 1, otherwise the spi
   * peripheral will not send any data out.
   */
  spi_enable_software_slave_management(SPI3);
  spi_set_nss_high(SPI3);

  // Enable SPI_3 DMA clock
  rcc_periph_clock_enable(spi3_dma.rcc_dma);

  // Enable SPI3 periph.
  spi_enable(SPI3);

  spi_arch_int_enable(&spi3);
}
